Added Put, Post and Delete methods and refactor dummy data

--- a/.jhipster/Project.json
+++ b/.jhipster/Project.json
@@ -15,7 +15,7 @@
   "jpaMetamodelFiltering": true,
   "name": "Project",
   "pagination": "pagination",
-  "readOnly": true,
+  "readOnly": false,
   "relationships": [
     {
       "otherEntityField": "login",
